src/components/redesign.css
.theme-light:not(html.custom-theme-background, :has(#clientThemeVars)){
	--bg-brand: var(--blurple);
		--background-base-low: var(--background-primary);
	--background-base-lower: var(--background-primary);
	--background-base-lowest: var(--background-secondary);
	--background-surface-highest: var(--background-primary);
	--background-surface-higher: var(--background-floating);
	--bg-base-tertiary: var(--background-tertiary);
	--custom-channel-members-bg: var(--background-secondary);
	--background-mod-subtle: var(--background-modifier-hover);


}.theme-dark:not(html.custom-theme-background, :has(#clientThemeVars)) {
	--background-base-low: var(--background-primary);
	--background-base-lower: var(--background-primary);
	--background-base-lowest: var(--background-secondary);
	--background-surface-highest: var(--background-primary);
	--background-surface-higher: var(--background-floating);
	--bg-base-tertiary: var(--background-tertiary);
	--custom-channel-members-bg: var(--background-secondary);
	--background-mod-subtle: var(--background-modifier-hover);
	--bg-brand: var(--blurple);
	--modal-footer-background: color-mix(in oklab, var(--primary-630) 100%, var(--theme-base-color, #000) var(--theme-base-color-amount, 0%));
	--checkbox-background-checked: var(--blurple);
	--text-normal: color-mix(in oklab, var(--primary-230) 100%, var(--theme-text-color, #000) var(--theme-text-color-amount, 0%));
	--__spoiler-background-color--hidden: var(--primary-700);
	--__spoiler-background-color--hidden--hover: hsl(var(--primary-700-hsl) / 0.8);
	--__spoiler-background-color--revealed: hsl(var(--white-500-hsl) / 0.1);
	--__spoiler-text-color--hidden: transparent;
	--__spoiler-warning-text-color: var(--primary-200);
	--__spoiler-warning-text-color--hover: var(--white-500);
	--__spoiler-warning-background-color: hsl(var(--black-500-hsl) / 0.6);
	--__spoiler-warning-background-color--hover: hsl(var(--black-500-hsl) / 0.9);
	--__spoiler-container-box-shadow-color: hsl(var(--black-500-hsl) / 0.1);
}

.theme-darker {
	--background-secondary-alt: color-mix(in oklab, var(--neutral-86) 30%, var(--theme-base-color, #000) var(--theme-base-color-amount, 0%));
	--chat-background-default: hsl(218 4% 18% / 1) !important;
}
.theme-midnight {
	--chat-background-default: hsl(0 0% 11% / 1) !important;
	--background-secondary-alt: color-mix(in oklab, var(--neutral-86) 60%, var(--theme-base-color, #000) var(--theme-base-color-amount, 0%));
}
html.theme-dark:not(.theme-darker, .theme-midnight, .custom-theme-background) .interactive__972a0 {
	color: var(--channels-default);
}
.chat_f75fb0,.container__133bf,
html:is(.theme-darker, .theme-midnight, .custom-theme-background)
	:is(.content_f75fb0, .subtitleContainer_f75fb0, .sidebarList_c48ade, .container_c8ffbb) {
	border: none !important;
}

.sidebarRegionScroller__23e6b{
	background: none !important
}
/* remove the title bar on web & linux */
.platform-web,
.platform-linux {
	.base_c48ade {
		grid-template-areas: "titleBar titleBar titleBar" "notice notice notice" "guildsList channelsList page";
		grid-template-rows: [top] 0px [titlebarEnd] min-content [page] 0px [end] !important;
	}
	.bar_c38106 .title_c38106 {
		display: none;
	}
	.bar_c38106 .trailing_c38106 {
		top: 33px !important;
	}
	.scroller_ef3116 {
		padding-top: 12px !important;
	}
	.notice__6e2b9,
	#bd-notices {
		margin-top: 0px !important;
	}
	.base_c48ade:has(.notice__6e2b9, .bd-notice) .bar_c38106 .trailing_c38106 {
		top: 69px !important;
	}
}
/* platform-specific fixes */
.platform-osx .base_c48ade {
	grid-template-areas:
		"titleBar titleBar titleBar"
		"notice notice notice"
		"guildsList channelsList page";
	grid-template-rows: [top] 0px [titlebarEnd] min-content [page] 0px [end] !important;
	.sidebar_c48ade > .guilds_c48ade {
		margin-top: 32px;
	}
	.bar_c38106 .trailing_c38106 {
		top: 67px;
	}
	.notice__6e2b9,
	#bd-notices {
		margin-top: 22px;
		margin-bottom: -27px;
	}
	&:has(.notice__6e2b9, .bd-notice) .trailing_c38106 {
		top: 94px !important;
	}
	&:has(.notice__6e2b9, .bd-notice) :is(.sidebarList_c48ade, .page_c48ade) {
		margin-top: 27px !important;
	}
}
.platform-osx .systemBar_c38106 {
	background: none;
}
html.platform-win .sidebarListRounded_c48ade {
	border-top-left-radius: 8px !important;
}
html.platform-win .trailing_c38106 :is(.recentsIcon_c99c29, .anchor_edefb8) {
	transform: translateY(3px);
}
html.platform-osx .title_c38106 {
	display: none !important;
}
#app-mount .h5_b717a1.eyebrow_b717a1 {
	text-transform: uppercase !important;
}
/*codeblock*/

.theme-dark .hljs-addition {
	background-color: #033a16;
	color: #aff5b4;
}
.theme-dark .hljs-deletion {
	background-color: #67060c;
	color: #ffdcd7;
}
.theme-dark
	:is(
		.hljs-attr,
		.hljs-attribute,
		.hljs-literal,
		.hljs-meta,
		.hljs-number,
		.hljs-operator,
		.hljs-selector-attr,
		.hljs-selector-class,
		.hljs-selector-id,
		.hljs-variable
	) {
	color: #79c0ff;
}
.theme-light
	:is(
		.hljs-attr,
		.hljs-attribute,
		.hljs-literal,
		.hljs-meta,
		.hljs-number,
		.hljs-operator,
		.hljs-selector-attr,
		.hljs-selector-class,
		.hljs-selector-id,
		.hljs-variable
	) {
	color: #005cc5;
}
.theme-dark :is(.hljs-title, .hljs-title.class_, .hljs-title.class_.inherited__, .hljs-title.function_) {
	color: #d2a8ff;
}
.theme-light :is(.hljs-title, .hljs-title.class_, .hljs-title.class_.inherited__, .hljs-title.function_) {
	color: #6f42c1;
}
.theme-dark :is(.hljs-code, .hljs-comment, .hljs-formula) {
	color: #8b949e;
}
.theme-light :is(.hljs-code, .hljs-comment, .hljs-formula) {
	color: #6a737d;
}
.theme-dark :is(.hljs-built_in, .hljs-symbol) {
	color: #ffa657;
}
.theme-light :is(.hljs-built_in, .hljs-symbol) {
	color: #e36209;
}
.theme-dark :is(.hljs-name, .hljs-quote, .hljs-selector-pseudo, .hljs-selector-tag) {
	color: #7ee787;
}
.theme-light :is(.hljs-name, .hljs-quote, .hljs-selector-pseudo, .hljs-selector-tag) {
	color: #22863a;
}
.theme-dark :is(.hljs-meta .hljs-string, .hljs-regexp, .hljs-string) {
	color: #a5d6ff;
}
/* ... */

